feat: se termina de implementar el front para el usuario no administrador

--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
             "outputPath": "dist/intexus-front",
             "index": "src/index.html",
             "browser": "src/main.ts",
+            "baseHref": "/IntexusFront/",
             "polyfills": [
               "zone.js"
             ],
